# fs-session

./: CLAUDE.md  Cargo.toml  Containerfile  LICENSE  README.md  build.rs  package.toml
.github/workflows/: ci.yml  release.yml
proto/: session.proto
src/: bus_handler.rs  cli.rs  error.rs  grpc.rs  lib.rs  main.rs  models.rs  store.rs  tracker.rs
tests/: session_test.rs
