[package]
name        = "fs-session"
description = "User session management for FreeSynergy — active user, open programs, runtime context"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-session"

[[bin]]
name = "fs-session"
path = "src/main.rs"

[dependencies]
# FS
fs-bus  = { path = "../fs-bus" }

async-trait = { version = "0.1" }
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1" }
thiserror   = { version = "2" }
tracing     = { version = "0.1" }
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["full"] }

sea-orm = { version = "=2.0.0-rc.37", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

# gRPC
tonic = "0.12"
prost = "0.13"

# REST + OpenAPI
axum              = "0.7"
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http        = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "time"] }
